--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,1 +1,21 @@
-python-template/pyproject.toml
+[project]
+name = "caboodle"
+version = "0.1.0"
+description = "Useful code I use in Python on regular basis"
+readme = "README.md"
+requires-python = ">=3.10"
+dependencies = [
+    "jupyterlab>=4.2.5",
+    "matplotlib>=3.9.2",
+    "numpy>=2.1.2",
+    "pandas>=2.2.3",
+    "scikit-learn>=1.5.2",
+    "scipy>=1.14.1",
+    "torch>=2.4.1",
+    "tqdm>=4.66.5",
+]
+
+[project.optional-dependencies]
+dev = [
+    "ruff>=0.6.9",
+]
