--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pandas>=2.2.3",
     "scikit-learn>=1.5.2",
     "scipy>=1.14.1",
+    "seaborn>=0.13.2",
     "torch>=2.4.1",
     "tqdm>=4.66.5",
 ]
