--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "scipy>=1.14.1",
     "seaborn>=0.13.2",
     "torch>=2.4.1",
+    "torchsummary>=1.5.1",
+    "torchvision>=0.19.1",
     "tqdm>=4.66.5",
 ]
 
