--- a/ruff.toml
+++ b/ruff.toml
@@ -37,6 +37,7 @@ indent-width = 4
 # Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
 # McCabe complexity (`C901`) by default.
 select = ["E4", "E7", "E9", "F"]
+extend-select = ["I"] # Auto sort imports
 ignore = []
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
